# qt5-qml-cpp-cmake-helloworld

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
cmake/modules/: QmlTest.cmake
mp/: CMakeLists.txt  mp.cpp  mp2.cpp
qml/: hw.qml  itemRect.qml
tests/: CMakeLists.txt
tests/qmltests/: CMakeLists.txt  test_math.cpp  test_math.qml  tst_QmlTestTest.qml  tst_math.cpp  tst_math.qml
